tests/paczka1/small_fuzzy/47696476.err
Error in line 1: M1WwDGSLfG S728 48,0
Error in line 4: G08Kih14Wc S381 21,0
